# roman_imsim

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  config  converter.py  det.py  grism.yaml  pyproject.toml  setup.py  snpitdispenser.py
.github/workflows/: build.yml  ci.yml  ci_macos.yaml  lint.yml  test.yml
config/: asdf.yaml  default.yaml  prism.yaml  roman_cutouts.yaml  sim_coadd.yaml  skyCatalog.yaml  tds.yaml  was.yaml
optical_models/: README.md  Roman_prism_OpticalModel_v0.8.yaml
roman_imsim/: __init__.py  _meta_data.py  _templates.py  asdf_helper.py  bandpass.py  bfe.py  detector_effects.py  detector_physics.py  filter_refraction.py  noise.py  obseq.py  optical_model_utils.py  oursca.py  output.py  output_asdf.py  photonOps.py  photonOps_old.py  photons.py  psf.py  resultants.py  roman_coadd.py  sca.py  scafile.py  simultaneously_updated.yaml  skycat.py  stamp.py  utils.py  wcs.py
roman_imsim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
roman_imsim/Effects/: Background.py  Bias.py  BrighterFatter.py  DarkCurrent.py  DeadPixel.py  Gain.py  IPC.py  Nonlinearity.py  Persistence.py  QuantumEfficiency.py  ReadNoise.py  ReciprocityFailure.py  RomanEffects.py  Saturation.py  VTPE.py  __init__.py
roman_imsim/config/: asdf.yaml  default.yaml  hack.yaml  sim_coadd.yaml  skyCatalog.yaml
roman_imsim/effects/: __init__.py  background.py  bias.py  brighter_fatter.py  dark_current.py  dead_pix.py  gain.py  interpix_cap.py  ipc.py  nonlinearity.py  persistence.py  quantum_efficiency.py  read_noise.py  recip_failure.py  reciprocity_failure.py  roman_effects.py  saturate.py  setup_sky.py  utils.py  vtpe.py
roman_imsim/photonOps/: README.md  __init__.py  _charge_diffusion.py  _slitless_spec.py
roman_imsim/photonOps/_grism/: __init__.py  _grism_operators.py  optical_model_utils.py
roman_imsim/photonOps/_wfss_disperser/: __init__.py  _wfss_disperser_operators.py  snpitdispenser.py
tests/: date_test.py  test_end_to_end.py  test_imports.py  test_photonOps.py  test_snpitdisperser.py  test_utils.py
