[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roman_imsim"
version = "2.0"
description = "Image simulation tools for the Roman Space Telescope"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Michael Troxel", email = "michael.troxel@duke.edu" }
]
requires-python = ">=3.8"
dependencies = [
  "galsim>=2.7",
  "fitsio>=1.2.6",
  "astropy>=5.3",
  "healpy",
  "numpy>=1.23",
  "matplotlib",
  "scipy",
  "packaging>=23.0",
  "setuptools>=65.0",
  "skycatalogs>=2.0.1"
]

[project.urls]
Homepage = "https://github.com/matroxel/roman_imsim"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*"]

[tool.isort]
profile = "black"
line_length = 110

[tool.black]
line-length = 110
target-version = ["py311"]
