[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roman_imsim"
version = "2.0"
description = "Image simulation tools for the Roman Space Telescope"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Michael Troxel", email = "michael.troxel@duke.edu" }
]
requires-python = ">=3.8"
dependencies = [
  "galsim",
  "fitsio",
  "astropy",
  "healpy",
  "numpy",
  "matplotlib",
  "scipy"
]

[project.urls]
Homepage = "https://github.com/DukeCosmology/roman_imsim"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*"]

[tool.isort]
profile = "black"
line_length = 110

[tool.black]
line-length = 110
target-version = ["py311"]
