[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "roman_imsim"
dynamic = ["version"]
description = "Image simulation tools for the Roman Space Telescope"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Michael Troxel", email = "michael.troxel@duke.edu" }
]
requires-python = ">=3.8"
dependencies = [
  "galsim",
  "fitsio",
  "astropy",
  "numpy",
  "skycatalogs",
  "packaging",
  "setuptools",
]

[project.urls]
Homepage = "https://github.com/DukeCosmology/roman_imsim"

[tool.setuptools_scm]
write_to = "roman_imsim/_version.py"
write_to_template = "__version__ = '{version}'\n"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*"]

[tool.isort]
profile = "black"
line_length = 110

[tool.black]
line-length = 110
target-version = ["py311"]
